I changed the profile picture

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="Olawale.jpg">
+                    <img src="Olawale picture.jpg">
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="Olawale.jpg">
+                    <img src="Olawale picture.jpg">
                 </div>
                 <div class="about-text">
                     <p>My journey into web development began with a curiosity about how websites work, which quickly turned into a deep appreciation for clean code and intuitive interfaces.</p>
