--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 
                 <div class="footer-social">
                     <a href="https://github.com/Olawaleraji2025" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="www.linkedin.com/in/olawale-raji-aa7997209" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://linkedin.com/in/olawale-raji-aa7997209" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://x.com/OlawaleRAJII" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://codepen.io/Olawale-Raji" target="_blank"><i class="fab fa-codepen"></i></a>
                 </div>
