Worked on the toggle menu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
                     <a href="#projects" class="nav-link">Projects</a>
                     <a href="#contact" class="nav-link">Contact</a>
                 </div>
-                <button class="menu-toggle" id="menu-toggle">
+                
                     <i class="fas fa-bars"></i>
-                </button>
+                    <i class="fas fa-x" id="x-icon"></i>
+                
+                <!-- <button class="menu-toggle-secondary" id="menu-toggle-secondary">
+                </button> -->
             </div>
         </nav>
     </header>
