Temporarily Added Trinity project to the portfolio

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="project-card" id="foodCard">
                     <img src="doordash img.PNG">
                     <div class="project-content">
@@ -242,6 +243,23 @@
                         <div class="project-links">
                             <a href="https://doordash-005.netlify.app" class="btn btn-primary" target="_blank">View Project</a>
                             <a href="https://github.com/Olawaleraji2025/FOOD-DELIVERY-PROJECT.git" class="btn btn-secondary" target="_blank">View Code</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <img src="Trinity Landing page.PNG">
+                    <div class="project-content">
+                        <h3>A Grocery Store (Trinity)</h3>
+                        <p>Bulding in progress.....</p>
+                        <div class="project-tags">
+                            <span class="tool-tag"><i class="fa-brands fa-html5" style="color: #f14309;"></i> HTML5</span>
+                    <span class="tool-tag"><i class="fa-brands fa-css3-alt" style="color: #0664ac;"></i> CSS3</span>
+                    <span class="tool-tag"><i class="fa-brands fa-square-js" style="color: #e1b105;"></i> JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://olawaleraji2025.github.io/TRINITY/" class="btn btn-primary" target="_blank">View Project</a>
+                            <!-- <a href="https://github.com/Olawaleraji2025/FOOD-DELIVERY-PROJECT.git" class="btn btn-secondary" target="_blank">View Code</a> -->
                         </div>
                     </div>
                 </div>
