`Added HTML5 and CSS3 tags to project card, updated JavaScript and CSS files for mobile responsiveness and form validation.`

--- a/index.html
+++ b/index.html
@@ -241,13 +241,16 @@
                         <h3>Ecommerce Landing Page</h3>
                         <p>By replicating the original design of "Deeski" landing page and layout, My goal is to showcase my ability to implementing responsive and user-friendly web interfaces.</p>
                         <div class="project-tags">
+                            <span class="tool-tag"><i class="fa-brands fa-html5"></i> HTML5</span>
+                    <span class="tool-tag"><i class="fa-brands fa-css3-alt"></i> CSS3</span> 
+                        </div>
                         <div class="project-links">
                             <a href="https://ecommerce-003.netlify.app" class="btn btn-primary" target="_blank">View Project</a>
                             <a href="https://github.com/Olawaleraji2025/ECOMMERCE-PROJECT.git" class="btn btn-secondary" target="_blank">View Code</a>
                         </div>
                     </div>
                 </div>
-            </div>
+            
 
 
                 <div class="project-card">
