Update project description for Guessing game App to clarify functionality and technologies used

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <img src="Images/guessTheNum img.PNG">
                 </div>
                     <div class="project-content">
-                            <h3>Guessing game App</h3>
-                        <p>I replicate "The Portland Clinic" landing page, using HTML and CSS to demonstrate my proficiency in front-end web development.</p>
+<h3>Guessing game App</h3>
+                        <p>An interactive number guessing game built with HTML, CSS, and JavaScript, challenging users to guess a randomly generated number.</p>
                         <div class="project-tags">
                             <span class="tool-tag"><i class="fa-brands fa-html5"></i> HTML5</span>
                     <span class="tool-tag"><i class="fa-brands fa-css3-alt" ></i> CSS3</span>
